# Metre

./: .dockerignore  .gitmodules  BUILD.md  CMakeLists.txt  CONFIGURING.md  Dockerfile  Dockerfile.valgrind  FAQ.md  FILTERS.md  LICENSE  Makefile  README  README.md  metre.conf.xml  metre.conf.yml  sonar-project.properties
.circleci/: config.yml
.github/workflows/: build-and-test.yml
cmake/modules/: FindGMock.cmake
docs/config/: config.md
examples/: component-hosting.conf.yml
include/: base64.h  capability.h  config.h  core.h  cothread.h  datastore.h  defs.h  defs.hpp  dhparams.h  dns.h  dns.hpp  endpoint.h  feature.h  feature.hpp  filter.h  fmt-enum.h  http.h  jid.h  jid.hpp  jwt.h  log.h  netsession.h  netsession.hpp  node.h  optional  optional.h  optional.hpp  pkix.h  router.h  router.hpp  sasl.h  send.h  sentry-wrap.h  server.h  server.hpp  sigslot.h  sockaddr-cast.h  sql.h  stanza.h  stanza.hpp  (+8 more)
src/: auth.cc  auth.cpp  base64.cc  bidi.cc  capability.cc  client.cc  client.cpp  components.cc  components.cpp  config.cc  config.cpp  datastore.cc  dialback.cc  dialback.cpp  dns.cc  endpoint.cc  feature.cc  feature.cpp  filter.cc  healthcheck.cc  http.cc  jabberserver.cc  jabberserver.cpp  jid.cc  jid.cpp  jwt.cc  linuxmain.cc  log.cc  log.cpp  mainloop.cc  mainloop.cpp  netsession.cc  netsession.cpp  pkix.cc  router.cc  router.cpp  saslexternal.cc  send.cc  sentry-wrap.cc  spiffing.cc  (+8 more)
src/capabilities/: disco.cc  node.cc  ping.cc  pubsub.cc  version.cc
src/endpoints/: simple.cc
src/filters/: disco-cache.cc  disco-filter.cc  domain-translation.cc  minimix.cc  spiffing.cc  unicode.cc
src/pubsub/: pubsub.cc
test-env/: dcn.pem  metre.conf.yml
test-env/tf/: certs.tf  providers.tf
tests/: cothread.cc  dns.cc  endpoint.cc  jid.cc  jid.cpp  jwt.cc  log.cc  main.cc  main.cpp  stanza.cc  testfns.h
